@@ -15,6 +15,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Use safe string functions. Removed unused parameters. Rename init_spells() to check_spells().
+ common/recipe.c
+ include/sproto.h
+ server/init.c spell_effect.c spell_util.c
+Nicolas Weeger 2007-08-05
+
 Use safe string functions. Removed unused parameters.
  include/sproto.h
  server/skill_util.c skills.c
